<resources>
    <string name="app_name">FirstChat</string>
    <string name="fastChat">FIRST\nCHAT</string>
    <string name="enterYourName">Enter your Name</string>
    <string name="enterYourPassword">Enter your password</string>
    <string name="enterYourEmail">Enter your Email</string>
    <string name="alreadyHaveAnAcc">Already have an account</string>
    <string name="signup">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="signInWithPN">Sign in with phone number</string>
    <string name="signUpWithPN">Sign up with phone number</string>
    <string name="signin">Sign In</string>
    <string name="clickForSignUp">Click for sign up</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="glance">Glance</string>
    <string name="calls">Calls</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="message">Message</string>
    <string name="gender">Gender</string>

    <array name="Gender">
        <item>Choose</item>
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
        <item>Prefer not to say</item>
    </array>
</resources>