<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_gray_50"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/amber_700"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/aladin"
            android:text="@string/fastChat"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="70sp"
            android:textStyle="bold" />

    </LinearLayout>


    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:hint="@string/enterYourName"
        android:padding="10dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:hint="@string/enterYourEmail"
        android:padding="10dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:hint="@string/enterYourPassword"
        android:padding="10dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/alreadyHaveAnAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        android:text="@string/alreadyHaveAnAcc"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="9dp"
        android:orientation="horizontal"
        android:layout_marginEnd="30dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <Spinner
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:entries="@array/Gender"
            android:id="@+id/genderSpinner"/>
    </LinearLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/amber_800"
        android:padding="26dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/google"
            android:padding="26dp"
            android:text="@string/google"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:cornerRadius="4dp" />

        <Button
            android:id="@+id/facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:backgroundTint="#3b5998"
            android:drawableLeft="@drawable/facebook"
            android:padding="26dp"
            android:text="@string/facebook"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="4dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/signInPN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signInWithPN"
        android:textSize="14sp" />

</LinearLayout>